[gd_scene load_steps=6 format=2]

[ext_resource path="res://characters/Character.tscn" type="PackedScene" id=1]
[ext_resource path="res://characters/enemy/Enemy.gd" type="Script" id=2]
[ext_resource path="res://GUI/art/bar_border.png" type="Texture" id=3]
[ext_resource path="res://GUI/art/bar_fill.png" type="Texture" id=4]
[ext_resource path="res://GUI/ValueIndicator.gd" type="Script" id=5]

[node name="Enemy" index="0" instance=ExtResource( 1 )]

position = Vector2( 620, 360 )
collision_layer = 4
collision_mask = 3
script = ExtResource( 2 )
_sections_unfolded = [ "Collision", "Transform", "Visibility" ]
base_speed = 70
knockback_percent = 12
hit_duration = 0.2
attack_cooldown = 2.5
chase_speed = 85.0
detect_range = 300.0
attack_range = 80
roam_delay = 2.5

[node name="Sprite" parent="." index="0"]

_sections_unfolded = [ "Animation", "Visibility" ]

[node name="DetectRange" type="Area2D" parent="." index="5"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="CollisionShape2D" parent="DetectRange" index="0"]

[node name="AttackRange" type="Area2D" parent="." index="6"]

input_pickable = true
gravity_vec = Vector2( 0, 1 )
gravity = 98.0
linear_damp = 0.1
angular_damp = 1.0
collision_layer = 0
collision_mask = 2
audio_bus_override = false
audio_bus_name = "Master"
_sections_unfolded = [ "Collision" ]
__meta__ = {
"_edit_group_": true
}

[node name="Area" type="CollisionShape2D" parent="AttackRange" index="0"]

[node name="RoamTimer" type="Timer" parent="." index="7"]

process_mode = 1
wait_time = 1.0
one_shot = false
autostart = false

[node name="HealthBar" type="TextureProgress" parent="." index="8"]

light_mask = 16
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = -24.0
margin_top = -32.0
margin_right = 40.0
margin_bottom = -24.0
rect_scale = Vector2( 0.75, 1 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
min_value = 0.0
max_value = 100.0
step = 1.0
page = 0.0
value = 50.0
exp_edit = false
rounded = false
texture_under = null
texture_over = ExtResource( 3 )
texture_progress = ExtResource( 4 )
radial_fill_degrees = 360.0
radial_center_offset = Vector2( 0, 0 )
nine_patch_stretch = false
script = ExtResource( 5 )
_sections_unfolded = [ "Textures", "Visibility" ]

[connection signal="health_changed" from="." to="HealthBar" method="_on_value_changed"]

[connection signal="body_entered" from="DetectRange" to="." method="_on_DetectRange_body_entered"]

[connection signal="body_exited" from="DetectRange" to="." method="_on_DetectRange_body_exited"]

[connection signal="body_entered" from="AttackRange" to="." method="_on_AttackRange_body_entered"]

[connection signal="body_exited" from="AttackRange" to="." method="_on_AttackRange_body_exited"]

[connection signal="timeout" from="RoamTimer" to="." method="_on_RoamTimer_timeout"]


